Fix rendering of try it out fields

--- a/resources/views/components/body-parameters.ejs
+++ b/resources/views/components/body-parameters.ejs
@@ -35,7 +35,7 @@
             </p>
         <% } else { %>
             <p>
-                <%- include("field-details", {...parameter, endpointId, component: 'body', hasChildren: false}) %>
+                <%- include("field-details", {...parameter, endpointId, component: 'body', hasChildren: false, isInput: true}) %>
             </p>
         <% } %>
 <% } %>
