--- a/resources/views/partials/frontmatter.hbs
+++ b/resources/views/partials/frontmatter.hbs
@@ -21,4 +21,4 @@ toc_footers:
 {{#if settings.openapi.enabled }}
 - <a href="openapi.yaml">View OpenAPI Spec</a>
 {{/if}}
-- <a href='http://github.com/knuckleswtf/scribe'>Documentation powered by Scribe ✍</a>
+- <a href='http://github.com/knuckleswtf/scribe-js'>Documentation powered by Scribe ✍</a>
